--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -23,6 +23,6 @@
     <div id="banner">
         
     </div>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
