--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <h1 class="text-center">Pokedex</h1>
-    <div>
-      <div id="pokemon-list"></div>
+    <div style="float: left;">
+      <div id="pokemon-list" ></div>
       <nav class="nav">
         <button  type="button" id="Anterior" class="btn btn-outline-dark  btn-sm">
           Anterior
@@ -27,7 +27,7 @@
         </button>
       </nav>
     </div>
-    <div id="banner"></div>
+    <div id="banner" style="float: left; margin-left: 18rem;"></div>
     <script src="app.js" type="module"></script>
 </body>
 </html>
